Fixed overflow issue on Medium cards

--- a/assets/css/partials/_medium.scss
+++ b/assets/css/partials/_medium.scss
@@ -1,63 +1,65 @@
 .display-medium-title {
-	font-size: 20px;
-	font-weight: 600;
-	margin: 0;
-	color: #424242;
+  font-size: 20px;
+  font-weight: 600;
+  margin: 0;
+  color: #424242;
 }
 #display-medium-owl-demo .details-title {
-	border-bottom: 0;
+  border-bottom: 0;
 }
 .display-medium-item .colInnerMed {
-	display: flex;
-	box-shadow: 0 0 10px #d9d9d9;
-	height: 100%;
-	flex-basis: 100%;
+  display: flex;
+  box-shadow: 0 0 10px #d9d9d9;
+  height: 100%;
+  flex-basis: 100%;
 }
-.colInnerMed .row, .mediumContent {
-	height: 100%;
+.colInnerMed .row,
+.mediumContent {
+  height: 100%;
 }
 .colInnerMed .container {
-	margin: 0;
-	width: 100%;
+  margin: 0;
+  width: 100%;
+  overflow: hidden;
 }
 .mediumContent p:last-of-type {
-	margin-top: auto;
+  margin-top: auto;
 }
 .colInnerMed img {
-	object-fit: cover;
-	height: 100%;
+  object-fit: cover;
+  height: 100%;
 }
 .colInnerMed .medPortrait {
-	background-size: cover;
-	background-position: center;
-	position: relative;
+  background-size: cover;
+  background-position: center;
+  position: relative;
 }
 .medPortrait a {
-	position: absolute;
-    height: 100%;
-    width: 100%;
-    top: 0;
-    left: 0;
+  position: absolute;
+  height: 100%;
+  width: 100%;
+  top: 0;
+  left: 0;
 }
 .display-medium-item a {
-	margin: 0;
+  margin: 0;
 }
 .mediumContent {
-	flex: 0 0 66%;
+  flex: 0 0 66%;
 }
 
 .news-and-events .mediumPostsContainer > .col {
-	padding-bottom: 1rem;
+  padding-bottom: 1rem;
 }
 
 #display-medium-owl-demo .medium-image {
-	height: 100%;
+  height: 100%;
 }
 .mediumContent {
-	padding: 1.5em;
-	display: flex;
-	flex-direction: column;
+  padding: 1.5em;
+  display: flex;
+  flex-direction: column;
 }
 .display-medium-date-read {
-	margin: 15px 0;
+  margin: 15px 0;
 }
